--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                         <input type="number" id="drydock_period" name="drydock_period" required step="0.1">
                     </div>
                     <div class="form-group">
-                        <label for="idle_days">Idle Days (days):</label>
+                        <label for="idle_days">Idle Days (days/year):</label>
                         <input type="number" id="idle_days" name="idle_days" required step="0.1">
                     </div>
                     <div class="form-group">
