Updating the background pic

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="background-container" style="background: url('{{ url_for('static', filename='paintpic.png') }}') no-repeat center center/cover;">
+    <div class="background-container" style="background: url('{{ url_for('static', filename='paintpic.jpg') }}') no-repeat center center/cover;">
         <div class="main-container">
             <div class="form-container">
                 <h1>Premium Hull Paint Selector</h1>
