--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Antifouling Paint Selector</title>
+    <title>Premium Hull Paint Selector</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <div class="background-container">
         <div class="main-container">
             <div class="form-container">
-                <h1>Antifouling Paint Selector</h1>
+                <h1>Premium Hull Paint Selector</h1>
                 <form id="paintForm">
                     <div class="form-group">
                         <label for="drydock_period">Drydock Period (Months):</label>
